--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React + TS</title>
+  <title>Reactive Shop</title>
 </head>
 
 <body>
-  <div id="root" class="bg-slate-950 min-h-screen text-zinc-300"></div>
+  <div id="root" class="min-h-screen"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
